--- a/index.html
+++ b/index.html
@@ -1,27 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+
     <title>Bevvy Bullet - The Football Koozie Revolution</title>
-    <meta name="description" content="Bevvy Bullet - A football-shaped beverage koozie that holds 12oz cans. Toss suds with buds, literally. Coming soon to Kickstarter." />
+
+    <meta
+      name="description"
+      content="Bevvy Bullet - A football-shaped beverage koozie that holds 12oz cans. Toss suds with buds, literally. Coming soon to Kickstarter."
+    />
     <meta name="author" content="Bevvy Bullet" />
-    <meta name="keywords" content="bevvy bullet, football koozie, beer koozie, can cooler, kickstarter, tailgate, party, floating koozie" />
+    <meta
+      name="keywords"
+      content="bevvy bullet, football koozie, beer koozie, can cooler, kickstarter, tailgate, party, floating koozie"
+    />
 
-    <meta property="og:title" content="Bevvy Bullet - The Football Koozie Revolution" />
-    <meta property="og:description" content="A football you can put a drink can inside. Keep your beverage cold while you toss it to your friends." />
+    <!-- Open Graph / Social Share -->
+    <meta
+      property="og:title"
+      content="Bevvy Bullet - The Football Koozie Revolution"
+    />
+    <meta
+      property="og:description"
+      content="A football you can put a drink can inside. Keep your beverage cold while you toss it to your friends."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png?v=1" />
+    <meta property="og:url" content="https://bevvybullet.com" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@BevvyBullet" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta
+      name="twitter:title"
+      content="Bevvy Bullet - The Football Koozie Revolution"
+    />
+    <meta
+      name="twitter:description"
+      content="A football you can put a drink can inside. Keep your beverage cold while you toss it to your friends."
+    />
+    <meta name="twitter:image" content="/og-image.png?v=1" />
+
+    <!-- Canonical URL -->
     <link rel="canonical" href="https://bevvybullet.com" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700;800&family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.ico" /> -->
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700;800&family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link rel="icon" href="data:," />
   </head>
 
   <body>
